# loxerpaper

./: Cargo.toml  LICENCE.md
docs/: windows.md
src/: constants.rs  main.rs
src/api/: client.rs  gnome.rs  mod.rs  notify_helper.rs  windows.rs
src/model/: config.rs  link.rs  mod.rs  response.rs  user.rs
