[package]
name = "loxerpaper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
toml = "0.9.5"
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros"] }
dirs-next = "2.0.0"
dialoguer = { version = "0.12.0", default-features = false, features = [
  "editor",
  "password",
  "zeroize",
] }
url = { version = "2.5.7", features = ["serde"] }
notify-rust = "4.6.0"
tempfile = "3.6.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Data_Xml_Dom",
  "Foundation",
  "UI_Notifications",
  "ApplicationModel_Core",
  "implement",
] }
winrt-notification = "0.5.1"

[[example]]
name = "windows_desktop_api"
path = "examples/windows_desktop_api.rs"
